# agent-fitness-coach

./: .env.example  .gitignore  AI_WORKFLOW.md  Dockerfile  EVALUATION.md  README.md  docker-compose.yml  pyproject.toml
eval/: metrics.py  run_eval.py  testset.json
knowledge_base/: 01-bench-press.md  02-squat.md  03-deadlift.md  04-overhead-press.md  05-barbell-row.md  06-pull-up-chin-up.md  07-isolation-exercises.md  08-progressive-overload.md  09-periodization.md  10-deload.md  11-rpe-rir.md  12-muscle-recovery.md  13-nutrition-basics.md  14-workout-split-ppl.md  15-workout-split-upper-lower.md  16-workout-split-full-body.md  17-one-rep-max.md  18-common-injuries.md  19-warm-up-cooldown.md  20-training-for-beginners.md
scripts/: ingest_kb.py
src/: config.py  main.py
src/agent/: orchestrator.py  tools.py
src/analysis/: insight.py  models.py  muscle_groups.py  normalize.py  stats.py  tool.py
src/api/: routes_chat.py  schemas.py
src/guardrails/: classifier.py  refusal.py
src/llm/: fpt_client.py  openai_client.py
src/rag/: chunker.py  generator.py  ingest.py  retriever.py  tool.py
tests/: test_agent.py  test_chunker.py  test_guardrails.py  test_stats.py
ui/: app.js  index.html  style.css
ui/components/: chat.js  citation-card.js  history-upload.js  sidebar.js  tool-trace.js
workout_history/: workout-history.json
