[project]
name = "agent-fitness-coach"
version = "0.1.0"
description = "AI Workout Coach — RAG + Coach Agent + Workout Analysis (Everfit take-home)"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "qdrant-client==1.12.1",
    "openai==1.58.1",
    "httpx==0.28.1",
    "tiktoken==0.8.0",
    "numpy==2.2.1",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "ruff==0.8.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
